[IMP] Added Ubuntu font. Also fixed main menu text wrapping for long menu labels

--- a/addons/openerp/static/css/screen.css
+++ b/addons/openerp/static/css/screen.css
@@ -35,7 +35,7 @@ body {
 
 body,textarea,input,select,option {
     color: #1f1f1f;
-    font-family: Verdana, Helvetica, sans-serif;
+    font-family: Ubuntu, Helvetica, sans-serif;
     line-height: 1.25;
 }
 
@@ -1670,13 +1670,13 @@ ul.sections-a li span.wrap a:hover span strong,ul.sections-a li span.wrap a:focu
 #sidenav-a li > span {
     display: block;
     height: 20px;
-    padding-left: 5px;
+    padding: 0 5px;
     font-size: 1.1em;
     background: url(../images/sidenav-link-a.png) 0 100% repeat-x;
     line-height: 20px;
     text-decoration: none !important;
     cursor: pointer;
-    min-width: 174px;
+    white-space: nowrap;
 }
 
 #sidenav-a .tree-grid,
